--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
        }
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.6"
+        "phpunit/phpunit": ">=5.6"
     },
     "scripts": {
         "test": "./vendor/bin/phpunit"
